<resources>
    <string name="app_name">Speedometer</string>
    <string name="button_start">Start Tracking</string>
    <string name="button_stop">Stop Tracking</string>
    <string name="button_logs">Speeding Logs</string>
    <string name="button_change_limit">Change limit</string>
    <string name="text_title">Welcome to the Speedometer!</string>
    <string name="current_speed">Loading...</string>
    <string name="info_message">Please click on the start button to initiate speed tracking</string>
    <string name="speed_limit">Speed limit:</string>
    <string name="set_limit_button">Update limit</string>
    <string name="log_title">Speeding Logs</string>
    <string name="all_logs_radio">All logs</string>
    <string name="past_7_days_radio">Past 7 days</string>
    <string name="no_logs_info">Well done! \nNo exceeding of the speed limit \nhas been recorded</string>

</resources>